style(chat-bubbles): set width of `.agent-turn` to `80%` to prevent horizontally overflowing
- Add a fixed width of `agent-turn` to 80% in chat-bubbles.
- This prevents ugly overflow-x of content on smaller screens, especially noticeable in my themes with chat bubble styles.

👷‍♀️ **TODO**

- 🔴 Strange `Theme` `[role="menuitem"]` on hover in Mozilla, broken design, some ugly bg left, and outline border visible wtf
- 🤔❓ There was new UI for `🟢 RESPONSE 1` and `🟢 RESPONSE 2`  when AI regenerate answer, ask for us to choose the better. I would like to improve that layout (increase `border-radius`, change `border-color`, add spacing in some elements, etc), but I can't trigger that layout to show again... 🙄
- 🕵️ Investigate strange behaviour for hover btns in Settings for Mozilla. It seems so slow, idk, like it's clashing with something else
- 🎨 Fix general colors in `_base.scss`, etc
- ⚒️ On smaller screens `Theme` btn is behind something on top on hover, wtf, looks cutted
- 🕵️ Outline color white for a second in chat-bubbles when I don't remember what hhh. When pressed send/enter?

--- a/extension-dev/css/index.css
+++ b/extension-dev/css/index.css
@@ -617,6 +617,10 @@ main [data-testid^="conversation-turn-"] .group {
   line-height: 1.8 !important;
 }
 
+main [data-testid^="conversation-turn-"] .group .agent-turn {
+  width: 80% !important;
+}
+
 main [data-testid^="conversation-turn-"] .group div[class*="lg:w-[calc(100%-115px)]"] {
   --gap-3: .75rem;
   --svg-w: 1.5rem;
@@ -1525,21 +1529,21 @@ main [data-testid^="conversation-turn-"] .group [class*="[.final-completion]"] s
 }
 
 .js-has-pseudo [csstools-has-34-36-2t-w-2q-39-38-38-33-32-1m-2w-2p-37-14-37-3a-2v-15]:not(does-not-exist):not(does-not-exist):not(does-not-exist) {
-  transition: transform .4s cubic-bezier(.175, .885, .32, 1.275), opacity .3s ease-in-out, background-color .2s ease-in-out, color .1s ease-in-out;
-  transition: transform .4s var(--easeOutBack), opacity .3s ease-in-out, background-color .2s ease-in-out, color .1s ease-in-out;
+  transition: transform .4s cubic-bezier(.175, .885, .32, 1.275), opacity .3s ease-in-out, background-color .2s ease-in-out, color .1s ease-in-out !important;
+  transition: transform .4s var(--easeOutBack), opacity .3s ease-in-out, background-color .2s ease-in-out, color .1s ease-in-out !important;
 }
 
 pre button:has(svg) {
-  transition: transform .4s cubic-bezier(.175, .885, .32, 1.275), opacity .3s ease-in-out, background-color .2s ease-in-out, color .1s ease-in-out;
-  transition: transform .4s var(--easeOutBack), opacity .3s ease-in-out, background-color .2s ease-in-out, color .1s ease-in-out;
+  transition: transform .4s cubic-bezier(.175, .885, .32, 1.275), opacity .3s ease-in-out, background-color .2s ease-in-out, color .1s ease-in-out !important;
+  transition: transform .4s var(--easeOutBack), opacity .3s ease-in-out, background-color .2s ease-in-out, color .1s ease-in-out !important;
 }
 
 .js-has-pseudo [csstools-has-34-36-2t-w-2q-39-38-38-33-32-1m-2w-2p-37-14-37-3a-2v-15-w-37-3a-2v]:not(does-not-exist):not(does-not-exist):not(does-not-exist):not(does-not-exist) {
-  transition: color .1s ease-in-out;
+  transition: color .1s ease-in-out !important;
 }
 
 pre button:has(svg) svg {
-  transition: color .1s ease-in-out;
+  transition: color .1s ease-in-out !important;
 }
 
 .js-has-pseudo [csstools-has-34-36-2t-w-2q-39-38-38-33-32-1m-2w-2p-37-14-37-3a-2v-15-1m-2w-33-3a-2t-36]:not(does-not-exist):not(does-not-exist):not(does-not-exist) {
