--- a/src/sass/elements/_transitions.scss
+++ b/src/sass/elements/_transitions.scss
@@ -58,8 +58,6 @@ button:not(.btn,
     }
 
     svg:hover {
-        // opacity: .8;
-        // scale: 1.12;
         transform: scale(1.12);
     }
 }
@@ -104,7 +102,6 @@ button[role="switch"] {
         span[data-state] {
             /* Ovo se kosi sa openai klasama, jer on dodaje translate-x -19px, pa se circle pomera levo, sto i nije lose, lol. Ako to ne zelimo, mozemo koristiti scale umesto transform: scale */
             transform: scale(.8);
-            // scale: .8;
         }
     }
 }
@@ -125,8 +122,6 @@ main form .grow .btn {
 
             /* Button w/ SVG */
             .bg-token-surface-primary {
-                // translate: 0 100%;
-                // rotate: 45deg;
                 transform: translateY(120%) scale(.5);
                 transition: transform .5s var(--easeOutBack);
             }
@@ -142,8 +137,6 @@ main form .grow .btn {
 
                 /* Button w/ SVG */
                 .bg-token-surface-primary {
-                    // translate: 0 0%;
-                    // rotate: 0deg;
                     transform: translateY(0%) scale(1);
                     opacity: 1 !important;
                 }
@@ -158,7 +151,6 @@ main form .grow .btn {
     transition: transform .4s var(--easeOutBack), opacity .3s ease-in-out;
 
     &:hover {
-        // translate: 0 -10%;
         transform: translateY(-10%);
     }
 }
@@ -167,21 +159,15 @@ main form .grow .btn {
 /* ___ Chat Bubbles */
 main [data-testid^="conversation-turn-"] {
     .group {
-        // transition: transform .4s var(--easeOutBack);
-
         &:hover {
-            // translate: 0 3px;
-            // transform: translateY(2px);
 
             /* Bubble message footer (icons wrapper) */
             div[class*="empty:hidden"]:has(button[class*="[.final-completion]"]) .visible {
-                // translate: 0 0;
                 transform: translateY(0);
             }
 
             /* Bubble message footer (svg icons) */
             [class*="[.final-completion]"] svg {
-                // scale: 1;
                 transform: scale(1);
             }
         }
@@ -189,31 +175,22 @@ main [data-testid^="conversation-turn-"] {
         /* Bubble message footer */
         div[class*="empty:hidden"]:has(button[class*="[.final-completion]"]) {
             overflow: hidden;
-            // border: 2px solid salmon !important;
 
             /* Bubble message footer (icons wrapper) */
             .visible {
-                // border: 2px solid salmon !important;
-                // translate: 0 130%;
                 transform: translateY(110%);
-                // transition: transform .3s var(--easeInOutCirc);
                 transition: transform .4s var(--easeInOutBack);
-                // transition: all .3s ease-in-out;
             }
         }
 
         /* Bubble message footer (svg icons) */
         [class*="[.final-completion]"] svg {
-            // scale: 0;
-            // transform: scale(0) translateY(0px);
             transform: translateY(0px);
             transition: transform .4s var(--easeOutBack), opacity .3s ease-in-out;
 
             &:hover {
                 opacity: .8;
-                // transform: translateY(-3px) scale(1);
                 transform: translateY(-3px);
-                // translate: 0 -3px;
             }
         }
     }
@@ -226,10 +203,10 @@ pre {
             transform .4s var(--easeOutBack),
             opacity .3s ease-in-out,
             background-color .2s ease-in-out,
-            color .1s ease-in-out;
+            color .1s ease-in-out !important;
 
         svg {
-            transition: color .1s ease-in-out;
+            transition: color .1s ease-in-out !important;
         }
 
         &:hover {
@@ -249,11 +226,8 @@ html.light pre button:has(svg):hover {
 /* ___ Scroll down button */
 main [role="presentation"] button.absolute.rounded-full {
     transition: transform .4s var(--easeOutBack), opacity .3s ease-in-out;
-    // transition: all .3s ease-in-out;
-    // border: 3px solid transparent !important;
 
     &:hover {
-        // translate: 0 10%;
         transform: translateY(10%);
         opacity: 1 !important;
     }
@@ -272,12 +246,9 @@ main [role="presentation"] button.absolute.rounded-full {
             &:hover {
                 color: var(--c-accent) !important;
                 text-decoration: underline;
-                // translate: 5px 0;
                 transform: translateX(5px);
 
                 svg {
-                    // scale: .9 !important;
-                    // translate: -5px 0;
                     transform: translateX(-5px) scale(.9) !important;
                 }
 
@@ -294,8 +265,6 @@ main [role="presentation"] button.absolute.rounded-full {
             span[data-state]:hover {
                 svg {
                     transform: translateY(2px) scale(1) !important;
-                    // translate: 0 -2px !important;
-                    // scale: 1 !important;
                 }
             }
         }
